# pulsewriter

./: .gitignore  .pulsewriter.yaml  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: blog.yaml
examples/: input.md
recipes/n8n/: daily_proposal.txt
src/pulsewriter.egg-info/: PKG-INFO  SOURCES.txt
src/pulsewriter_api/: main.py
src/pulsewriter_cli/: main.py
src/pulsewriter_core/templates/: linkedin.md.j2
tests/: .gitignore  test_last.py
